# rhizome

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
src/rhizome/: __init__.py  config.py  main.py  pipeline.py
src/rhizome/cli/: __init__.py  commands.py
src/rhizome/inference/: __init__.py  model.py  similarity.py
src/rhizome/vault/: __init__.py  backup.py  base.py  logseq.py  obsidian.py
tests/: test_audit.py  test_commands.py  test_config.py  test_exclude_dirs.py  test_logseq.py  test_model.py  test_similarity.py  test_single_note.py  test_vault.py
